fixed title spacing on resume page

--- a/src/components/pages/Resume.scss
+++ b/src/components/pages/Resume.scss
@@ -3,7 +3,6 @@
   display: flex;
   justify-content: space-around;
   margin-bottom: 80px;
-  padding: 10px;
   
   .resume-container {
     background-color: rgba(29, 73, 19, 0.87);
@@ -20,10 +19,14 @@
       width: 30%;
       padding: 20px;
       padding-left: 10px;
+      position: relative;
 
       .title {
         align-self: flex-start;
         padding-left: 10px;
+        position: absolute;
+        left: -11px;
+        top: -2px;
 
         h1 {
           font-family: 'Quicksand', sans-serif;
@@ -35,6 +38,8 @@
       }
 
       p {
+        position: absolute;
+        top: 100px;
         font-family: 'Quicksand', sans-serif;
         font-weight: 300;
         font-size: 1.5rem;
